[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = ""
authors = ["Lou Streit <lou.streit@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^23.11.0"
numpy = "^1.26.2"
tqdm = "^4.66.1"

[tool.poetry.dev-dependencies]
ipython = "^8.10.0"
ipdb = "^0.13.9"
black = "^23.1.0"
isort = "^5.10.1"
mypy = "^1.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
